軽微な修正

--- a/tests/page_template/handout_info.html
+++ b/tests/page_template/handout_info.html
@@ -44,7 +44,7 @@ $(function(){
 ●学部・学年・学期<br />
 　{%faculty%}学部　{%grade%}年　前期<br />
 ●ユニット<br />
-				　{%unit_name%}<br />
+				　{%unit%}<br />
 				　第{%unit_num%}回<br />
 　{%date_month%}月{%date_days%}日({%days_of_week%})&nbsp;{%period%}限
 <br />
